# fastpipe

./: .gitignore  LICENSE  MANIFEST.in  README.md  _executors.py  pyproject.toml
src/fastpipe/: __init__.py  _constants.py  _runtime.py  _stream.py  _types.py
tests/: conftest.py  test_all_modes.py  test_async_cleanup.py  test_async_shutdown.py  test_callable_class.py  test_cleanup_exceptions.py  test_concurrency_stress.py  test_concurrent_pipelines.py  test_executor_factory.py  test_fail_fast.py  test_invariants.py  test_iterator.py  test_partial_batch.py  test_partial_batch_flush_error.py  test_process_adapter.py  test_process_batch.py  test_process_unbatch.py  test_resource_cleanup.py  test_sentinel_validation.py  test_stream_exceptions.py  test_streaming.py  test_validation_quick.py  test_worker_count_mismatch.py
