[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"fastpipe" = ["py.typed"]

[project]
name = "fastpipe"
version = "0.0.1"
description = "Python parallel processing library for building data pipelines. Supports thread/process/async execution with batch and streaming modes. Zero dependencies, type-safe, perfect for ETL and single-machine workloads."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "FastPipe Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["pipeline", "parallel", "concurrent", "streaming", "batch", "etl", "data-processing", "multiprocessing", "async", "thread-pool"]

[project.urls]
Homepage = "https://github.com/storyicon/fastpipe"
Repository = "https://github.com/storyicon/fastpipe"

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "pytest>=7.0.0",
]

[tool.ruff]
# Target Python version
target-version = "py39"

# Max line length
line-length = 100

# Excluded directories
exclude = [
    ".git",
    ".pytest_cache",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
]

[tool.ruff.lint]
# Enabled rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

# Ignored rules
ignore = [
    "E501",  # Line length handled by formatter
]

# Allow auto-fixing
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Use double quotes
quote-style = "double"

# Indentation style
indent-style = "space"

# Line ending
line-ending = "auto"
